--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.example'
+group = 'com.bside'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -19,10 +19,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// mysql	
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	
+	// jdbc
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	
 	// jwt
 	implementation 'org.springframework.boot:spring-boot-starter-security'
