1) feat : .war 배포 설정

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,24 @@
 plugins {
 	id 'java'
+	id 'war'
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.bside'
 version = '0.0.1-SNAPSHOT'
+
+allprojects {
+    buildDir = './dev_build'
+}
+
+bootWar {
+	archiveFileName = 'redaeri.war'
+}
+
+war { 
+	enabled = false
+}
 
 java {
 	toolchain {
@@ -21,6 +34,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	// mysql	
 	runtimeOnly 'com.mysql:mysql-connector-j'
