--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     //lombok
     compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	//json
+	implementation 'org.json:json:20250107'
+	
 }
 
 tasks.named('test') {
