1) feat : 스웨거 적용, 말투 분석

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ dependencies {
 	//json
 	implementation 'org.json:json:20250107'
 	
+	//swegger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+	
 }
 
 tasks.named('test') {
