--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,17 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+	all*.exclude group: 'org.springframework.boot', module: 'logback-classic'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
